point to different domains

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <ul>
       <li>
         Secure link for modern browsers:
-        <a href="malicious.html" rel="noopener" target="_blank">Go to a malicious site</a> using rel="noopener".
+        <a href="https://inside.github.io/target-blank-poc/malicious.html" rel="noopener" target="_blank">Go to a malicious site</a> using rel="noopener".
       </li>
       <li>
         Secure link for old browsers:
-        <a href="malicious.html" rel="noreferrer" target="_blank">Go to a malicious site</a> using rel="noreferrer".
+        <a href="https://inside.github.io/target-blank-poc/malicious.html" rel="noreferrer" target="_blank">Go to a malicious site</a> using rel="noreferrer".
       </li>
       <li>
         Secure link for everyone:
-        <a href="malicious.html" rel="noreferrer" target="_blank">Go to a malicious site</a> using rel="noopener noreferrer".
+        <a href="https://inside.github.io/target-blank-poc/malicious.html" rel="noreferrer" target="_blank">Go to a malicious site</a> using rel="noopener noreferrer".
       </li>
       <li>
-        <a href="malicious.html" target="_blank">Click HERE IT'S TOTALLY FINE, NO WORRIES, TRUST ME I'M YOUR FRIEND!!</a> no rel attribute.
+        <a href="https://inside.github.io/target-blank-poc/malicious.html" target="_blank">Click HERE IT'S TOTALLY FINE, NO WORRIES, TRUST ME I'M YOUR FRIEND!!</a> no rel attribute.
       </li>
     </ul>
   </body>
